# BOAL-BO42

./: LICENSE  README.md  boal.js  index.html  main.boal  pyproject.toml  run.py
.github/workflows/: main.yml  pages.yml
boal/: cli.py  interpreter.py  run.py
boal/boal/: interpreter.py
boal/core/: ast.py  parser.py  runtime.py  trace.py
boal/hni/: interface.py
boal/programs/: main.boal
boal/security/: control_plane.py  guard.py
boal/workflow/: main.yml
bool-language/: package.json
bool-language/syntaxes/: boal.tmLanguage.json
core/: ast.py  lexer.py  parser.py  runtime.py
docs/: PYPI.md  get-started.html  index.html  intro.html  output.html  syntax.html
hni/: hub.py  network.py
project/: main.boal
security/: control_plane.py  guard.py
