[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boal-bo42"
version = "1.0.0"
description = "BO42 Execution Kernel / BOAL runtime system"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Anointing Joseph E.G Mayami", email = "officialjoemayami@gmail.com" },
  { name = "High Intelligence Security", email = "support@highintelligencesecurity.com" }
]

keywords = ["bo42", "boal", "runtime", "kernel"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/bo42/boal-bo42"
Issues = "https://github.com/bo42/boal-bo42/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]

# ✅ THIS is the ONLY setuptools config you should keep
[tool.setuptools]
packages = ["bo42", "boal", "core", "hni", "security"]

[tool.setuptools.package-data]
bo42 = ["*"]
boal = ["*"]
core = ["*"]
hni = ["*"]
security = ["*"]

[project.scripts]
bo42-run = "bo42.cli:main"