[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "boal-bo42"
version = "1.1.3"
description = "BO42 Execution Kernel / BOAL runtime system"
readme = "docs/PYPI.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

authors = [
    { name = "King Anointing Joseph Mayami", email = "officialjoemayami@gmail.com" },
    { name = "High Intelligence Security" }
]

keywords = ["bo42", "boal", "interpreter", "runtime", "execution-kernel"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []


[project.urls]
Homepage = "https://github.com/officialjoemayami/BOAL-BO42"
Issues = "https://github.com/officialjoemayami/BOAL-BO42/issues"
Documentation = "https://officialjoemayami.github.io/BOAL-BO42/"


# =========================
# SETUPTOOLS CONFIGURATION
# =========================
[tool.setuptools]

# IMPORTANT: your code lives inside ./BO42
package-dir = {"" = "."}


[tool.setuptools.packages.find]
where = ["."]
include = ["boal*", "bo42*"]
exclude = ["tests*"]


[project.scripts]
boal = "boal.cli:main"